# Coursework

./: .gitignore  README.md
CSC340 - Programming Methodology/Milestone 4 - student/: CMakeLists.txt  binary_search_tree.h  milestone4.cpp  tree_node.cpp
CSC340 - Programming Methodology/Milestone 5 - student/: CMakeLists.txt  binary_search_tree.cpp  binary_search_tree.h  cache_manager.cpp  dll_node.cpp  doubly_linked_list.cpp  generatedOutputFile - partial.txt  hash_node.cpp  hash_table.cpp  hash_table.h  milestone5.json
CSC340 - Programming Methodology/Milestone1/: doubly_linked_list.cpp  doubly_linked_list.h
CSC340 - Programming Methodology/Milestone2/: generatedOutputFile.txt  hash_node.h  milestone2_config.json
CSC340 - Programming Methodology/Milestone3/: cache_manager.cpp
CSC340 - Programming Methodology/Milestone3_2/: testCase1OutputFile.txt
CSC415 - Operating Systems/csc415-assignment-1-commandline-vincivv/: Almat_Dias_HW1_main.c  README.md
CSC415 - Operating Systems/csc415-assignment-2-bufferandstruct-vincivv/: Makefile  assignment2.h
CSC415 - Operating Systems/csc415-assignment-4-policedatathreads-vincivv/: Almat_Dias_HW4_hashMap.c  Almat_Dias_HW4_hashMap.h  Almat_Dias_HW4_main  Almat_Dias_HW4_main.c  Makefile  header.txt
CSC415 - Operating Systems/csc415-assignment-5-buffered-io-vincivv/: b_io.h
CSC415 - Operating Systems/csc415-assignment-6-device-driver-vincivv/: README.md
CSC415 - Operating Systems/csc415-filesystem-blossomxi/: Makefile  b_io.c  b_io.h  freemap.h  fsInit.c  fsshell.c  isFile_isDir.c  parsePath.c  parsePath.h  rootDir.c
CSC415/csc415-assignment-1-commandline-vincivv/: Makefile
CSC415/csc415-assignment-2-bufferandstruct-vincivv/: .gitignore  Almat_Dias_HW2_main  Almat_Dias_HW2_main.c  README.md
CSC415/csc415-assignment-3-simpleshell-vincivv/: Almat_Dias_HW3_main  Almat_Dias_HW3_main.c  Makefile  README.md  commands.txt
CSC415/csc415-assignment-4-policedatathreads-vincivv/: .gitignore  README.md
CSC415/csc415-assignment-5-buffered-io-vincivv/: Almat_Dias_HW5_main  DATA  Makefile  README.md  b_io.c  fsLowSmall.h
CSC415/csc415-filesystem-blossomxi/: .gitignore  directory.c  freemap.c  fsLow.h  fsStat.c  fsStat.h  getcwd_setcwd.c  john.c  mfs.h  (+3 more)
csc340/Milestone1/: CMakeLists.txt  dll_node.cpp  dll_node.h  generate_output.cpp  generate_output.h  milestone1.cpp  outputFile - testCase 1.txt
csc340/Milestone2/: CMakeLists.txt  hash_table.cpp  hash_table.h  milestone2.cpp  milestone2.json  outputFile - testCase 1.txt
csc340/Milestone3/: CMakeLists.txt  doubly_linked_list.cpp  hash_table.cpp
csc340/Milestone3_2/: CMakeLists.txt  cache_manager.cpp  doubly_linked_list.cpp  hash_table.cpp  milestone3.cpp
(+133 files in other folders)
